<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">


    <item android:id="@+id/action_email"
        android:title="@string/sendemail"
        android:icon="@drawable/ic_action_mail"
        app:showAsAction="always" />

    <item android:id="@+id/action_phone"
        android:title="@string/phone"
        android:icon="@drawable/ic_action_phone_start"
        app:showAsAction="always" />

    <item android:id="@+id/action_tweet"
        android:title="@string/twitter"
        android:icon="@drawable/ic_action_twitter"
        app:showAsAction="always" />

    <item android:id="@+id/action_linkedin"
        android:title="@string/linkedin"
        android:icon="@drawable/ic_action_linkedin"
        app:showAsAction="always" />

</menu>
